[gd_scene load_steps=8 format=3 uid="uid://w0qjpol4kk7q"]

[ext_resource type="Texture2D" uid="uid://d36mew1ftavga" path="res://_resources/splash_screen/godot_shout.png" id="1"]
[ext_resource type="FontFile" uid="uid://csc2glh3wqj1u" path="res://_resources/fonts/BankGothic Md BT.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://bopg87vp0gqew" path="res://_resources/splash_screen/scn_logo.png" id="3"]
[ext_resource type="Script" uid="uid://crhx7jlw2t5n7" path="res://_scripts/splash_screen.gd" id="5"]
[ext_resource type="PackedScene" path="res://_scenes/scene_transitioner.tscn" id="6"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="splash_screen" type="Node2D"]
script = ExtResource("5")

[node name="scn_logo" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(379, 376)
texture = ExtResource("3")
centered = false
region_enabled = true
region_rect = Rect2(379, 376, 522, 67)

[node name="godot_shout" type="Sprite2D" parent="."]
position = Vector2(640, 624)
texture = ExtResource("1")

[node name="tween" type="Tween" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="timer" type="Timer" parent="."]

[node name="S" type="Sprite2D" parent="."]
position = Vector2(-196, -202)
texture = ExtResource("3")
centered = false
region_enabled = true
region_rect = Rect2(356, 174, 196, 201)

[node name="C" type="Sprite2D" parent="."]
position = Vector2(553, -202)
texture = ExtResource("3")
centered = false
region_enabled = true
region_rect = Rect2(553, 174, 183, 201)

[node name="N" type="Sprite2D" parent="."]
position = Vector2(1280, -202)
texture = ExtResource("3")
centered = false
region_enabled = true
region_rect = Rect2(737, 174, 189, 201)

[node name="scene_transitioner" parent="." instance=ExtResource("6")]
visible = false

[node name="SKIP" type="Button" parent="."]
offset_right = 1283.0
offset_bottom = 722.0
focus_mode = 0
flat = true

[node name="canal" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_top = 376.0
offset_right = 1280.0
offset_bottom = 421.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("1")
text = "youtube.com/@Rafa_SCN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="game_is_free" type="Label" parent="."]
offset_top = 689.0
offset_right = 1280.0
offset_bottom = 715.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("2")
text = "This game is 100% free to play. If you paid for it you were scammed."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="SKIP" to="." method="_on_SKIP_button_up"]
